feat: add header authorization on swagger documentation
