# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  models.Response:
+  lib.Response:
     properties:
       data: {}
       message:
@@ -61,7 +61,7 @@ paths:
           description: User updated successfully
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -69,11 +69,11 @@ paths:
         "400":
           description: Invalid ]request body or hashing password failed
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
       summary: Forgot password
       tags:
       - auth
@@ -100,20 +100,18 @@ paths:
         "200":
           description: User login Successfully
           schema:
-            allOf:
-            - $ref: '#/definitions/models.Response'
-            - properties:
-                data:
-                  $ref: '#/definitions/models.User'
-              type: object
+            properties:
+              token:
+                type: string
+            type: object
         "400":
           description: Invalid request body or hash password failed
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "401":
           description: Invalid email or password
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
       summary: Login user
       tags:
       - auth
@@ -149,7 +147,7 @@ paths:
           description: User created successfully
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -157,31 +155,70 @@ paths:
         "400":
           description: Invalid request body or hash password failed
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "409":
           description: Email or username already exists
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
       summary: Create new user
       tags:
       - auth
   /users:
     get:
-      description: Retrieving all user data
+      description: Retrieving all user data with pagination support
+      parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - default: 1
+        description: Page number
+        in: query
+        minimum: 1
+        name: page
+        type: integer
+      - default: 10
+        description: Number of items per page
+        in: query
+        maximum: 100
+        minimum: 1
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: Success get all users
           schema:
-            allOf:
-            - $ref: '#/definitions/models.Response'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/models.User'
-                  type: array
-              type: object
+            properties:
+              data:
+                items:
+                  $ref: '#/definitions/models.User'
+                type: array
+              message:
+                type: string
+              meta:
+                properties:
+                  currentPage:
+                    type: integer
+                  perPage:
+                    type: integer
+                  totalData:
+                    type: integer
+                  totalPages:
+                    type: integer
+                type: object
+              success:
+                type: boolean
+            type: object
+        "400":
+          description: Invalid pagination parameters
+          schema:
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Get all users
       tags:
       - users
@@ -190,6 +227,12 @@ paths:
       - application/x-www-form-urlencoded
       description: Create a new user with a unique username and email
       parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - example: koda@mail.com
         in: formData
         name: email
@@ -216,7 +259,7 @@ paths:
           description: User created successfully
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -224,11 +267,13 @@ paths:
         "400":
           description: Invalid request body or hash password failed
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "409":
           description: Email or username already exists
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Create new user
       tags:
       - users
@@ -238,6 +283,12 @@ paths:
       - application/x-www-form-urlencoded
       description: Delete user by Id
       parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User Id
         in: path
         name: id
@@ -250,7 +301,7 @@ paths:
           description: User deleted successfully
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -258,11 +309,13 @@ paths:
         "400":
           description: Invalid Id format
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Delete user
       tags:
       - users
@@ -271,6 +324,12 @@ paths:
       - application/x-www-form-urlencoded
       description: Retrieving user data based on Id
       parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User Id
         in: path
         name: id
@@ -283,7 +342,7 @@ paths:
           description: Success get user
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -291,11 +350,13 @@ paths:
         "400":
           description: Invalid Id format
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Get user by Id
       tags:
       - users
@@ -304,6 +365,12 @@ paths:
       - application/x-www-form-urlencoded
       description: Updating user data (username and email) based on Id
       parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User Id
         in: path
         name: id
@@ -326,7 +393,7 @@ paths:
           description: User updated successfully
           schema:
             allOf:
-            - $ref: '#/definitions/models.Response'
+            - $ref: '#/definitions/lib.Response'
             - properties:
                 data:
                   $ref: '#/definitions/models.User'
@@ -334,11 +401,13 @@ paths:
         "400":
           description: Invalid Id format or request body
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Update user
       tags:
       - users
@@ -348,6 +417,12 @@ paths:
       - multipart/form-data
       description: Upload or replace the profile picture for a user by Id.
       parameters:
+      - default: Bearer <token>
+        description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User Id
         in: path
         name: id
@@ -364,19 +439,21 @@ paths:
         "200":
           description: Successfully uploaded photo profile
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "400":
           description: Bad request (invalid Id, wrong file type, or file too large)
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
         "500":
           description: Failed to save file
           schema:
-            $ref: '#/definitions/models.Response'
+            $ref: '#/definitions/lib.Response'
+      security:
+      - BearerAuth: []
       summary: Upload user profile picture
       tags:
       - users
